Ability to create files from script

--- a/examples/dependent/Dockerfile
+++ b/examples/dependent/Dockerfile
@@ -1,4 +1,8 @@
 ARG BASE_IMAGE=emb/base
 FROM ${BASE_IMAGE}
 
-RUN echo "dependent" >> /tmp/layers.txt
+WORKDIR /home/app
+
+COPY ./dependencies.txt ./
+
+RUN echo "base:image" >> ./dependencies.txt
