--- a/examples/simple/Embfile.yml
+++ b/examples/simple/Embfile.yml
@@ -1,1 +1,11 @@
 # yaml-language-server: $schema=../../src/config/schema.json#/definitions/ComponentConfig
+
+tasks:
+  confirm:
+    vars:
+      NAME: ${env:NAME:-world}
+    confirm:
+      message: Are you sure?
+      expect: "${NAME}"
+    script: | # shell
+      echo "Running task after confirmation! Hello ${NAME}"
