--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "@oclif/core": "^4.5.2",
     "@oclif/plugin-autocomplete": "^3.2.34",
     "@oclif/plugin-help": "^6.2.32",
-    "@oclif/plugin-not-found": "^3.2.63",
     "@oclif/plugin-update": "^4.7.3",
     "@oclif/table": "^0.4.12",
     "ajv": "^8.17.1",
@@ -111,7 +110,8 @@
     "dirname": "emb",
     "commands": "./dist/src/cli/commands",
     "hooks": {
-      "init": "./dist/src/cli/hooks/init"
+      "init": "./dist/src/cli/hooks/init",
+      "command_not_found": "./dist/src/cli/hooks/not-found"
     },
     "macos": {
       "identifier": "dev.enspirit.emb"
@@ -119,7 +119,6 @@
     "plugins": [
       "@oclif/plugin-help",
       "@oclif/plugin-autocomplete",
-      "@oclif/plugin-not-found",
       "@oclif/plugin-update"
     ],
     "topicSeparator": " ",
