--- a/package.json
+++ b/package.json
@@ -42,50 +42,50 @@
   "dependencies": {
     "@fastify/deepmerge": "^3.1.0",
     "@kubernetes/client-node": "1.3.0",
-    "@listr2/manager": "^3.0.1",
+    "@listr2/manager": "^3.0.3",
     "@oclif/core": "^4.5.2",
     "@oclif/plugin-autocomplete": "^3.2.34",
     "@oclif/plugin-help": "^6.2.32",
-    "@oclif/plugin-update": "^4.7.3",
+    "@oclif/plugin-update": "^4.7.4",
     "@oclif/table": "^0.4.12",
     "ajv": "^8.17.1",
     "ansi-escapes": "^7.0.0",
     "colorette": "^2.0.20",
-    "docker-compose": "^1.2.0",
+    "docker-compose": "^1.3.0",
     "dockerode": "^4.0.7",
     "dotenv": "^17.2.1",
     "execa": "^9.6.0",
     "fast-json-patch": "^3.1.1",
-    "fdir": "^6.4.6",
+    "fdir": "^6.5.0",
     "find-up": "^7.0.0",
     "glob": "^11.0.3",
     "graphlib": "^2.1.8",
-    "@inquirer/prompts": "^7.8.3",
-    "@listr2/prompt-adapter-inquirer": "^3.0.2",
-    "listr2": "^9.0.1",
+    "@inquirer/prompts": "^7.8.4",
+    "@listr2/prompt-adapter-inquirer": "^3.0.3",
+    "listr2": "^9.0.3",
     "luxon": "^3.7.1",
-    "protobufjs": "^7.5.3",
+    "protobufjs": "^7.5.4",
     "p-map": "^7.0.3",
     "simple-git": "^3.28.0",
     "yaml": "^2.8.1",
-    "zod": "^4.0.16"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.32.0",
+    "@eslint/js": "^9.34.0",
     "@oclif/prettier-config": "^0.2.1",
     "@oclif/test": "^4",
     "@tsconfig/node20": "^20.1.6",
-    "@types/dockerode": "^3.3.42",
+    "@types/dockerode": "^3.3.43",
     "@types/graphlib": "^2.1.12",
     "@types/luxon": "^3.7.1",
-    "@types/node": "^24.2.0",
-    "@typescript-eslint/eslint-plugin": "^8.39.0",
-    "@typescript-eslint/parser": "^8.39.0",
-    "eslint": "^9.32.0",
+    "@types/node": "^24.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
+    "eslint": "^9.34.0",
     "eslint-config-oclif": "^6",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-prettier": "^5.5.4",
     "json-schema-to-typescript": "^15.0.4",
     "oclif": "^4",
     "prettier": "^3.6.2",
@@ -93,7 +93,7 @@
     "shx": "^0.4.0",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
-    "tsx": "^4.20.3",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4",
     "vite-tsconfig-paths": "^5.1.4"
@@ -148,5 +148,5 @@
       }
     }
   },
-  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
+  "packageManager": "pnpm@10.15.1"
 }
