--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,6 +91,12 @@ jobs:
     name: Website
     runs-on: ubuntu-latest
     needs: build  # website docs reference emb commands
+    services:
+      docker:
+        image: docker:dind
+        options: --privileged --shm-size=2g
+        volumes:
+          - /var/run/docker.sock:/var/run/docker.sock:ro
 
     steps:
       - name: Checkout
