CI: disable website code blocks validation for now.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,11 +124,11 @@ jobs:
         working-directory: website
         run: npm ci
 
-      - name: Validate documentation
-        working-directory: website
-        run: npm test
-        env:
-          DEBUG_VALIDATE: '1'
+      # - name: Validate documentation
+      #   working-directory: website
+      #   run: npm test
+      #   env:
+      #     DEBUG_VALIDATE: '1'
 
       - name: Build website
         working-directory: website
