--- a/examples/production-ready/.env
+++ b/examples/production-ready/.env
@@ -3,3 +3,9 @@ NODE_ENV=development
 LOG_LEVEL=debug
 API_PORT=3000
 WEB_PORT=8080
+
+# PostgreSQL configuration (external service, not an EMB component)
+POSTGRES_USER=app
+POSTGRES_PASSWORD=secret
+POSTGRES_DB=production_ready
+POSTGRES_PORT=5432
