--- a/examples/production-ready/.env.production
+++ b/examples/production-ready/.env.production
@@ -8,6 +8,13 @@ LOG_LEVEL=warn
 API_PORT=3000
 WEB_PORT=80
 
+# PostgreSQL configuration (external service, not an EMB component)
+# In production, these would typically come from a secrets manager
+POSTGRES_USER=app_prod
+POSTGRES_PASSWORD=secure_production_password
+POSTGRES_DB=production_ready
+POSTGRES_PORT=5432
+
 # Example: secrets would come from a secrets manager
-# DATABASE_URL=${vault:secret/prod/database#url}
+# POSTGRES_PASSWORD=${vault:secret/prod/database#password}
 # API_KEY=${vault:secret/prod/api#key}
